Add email bypass without production environment and fix mongodb

--- a/config-development.json
+++ b/config-development.json
@@ -10,9 +10,7 @@
     },
     "mongodb": {
         "hosts": ["127.0.0.1"],
-        "db": "openhab",
-        "user": "",
-        "password": ""
+        "db": "openhab"
     },
     "redis": {
         "host": "127.0.0.1",
@@ -20,6 +18,7 @@
         "password": "secret"
     },
     "mailer": {
+        "sending": "disabled",
         "host" : "somehost",
         "port": 465,
         "secureConnection": true,
