--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "4.15.3",
     "express-form": "0.12.6",
     "express-session": "^1.15.3",
+    "firebase-admin": "^5.2.1",
     "heapdump": "0.3.7",
     "hiredis": "0.4",
     "less-middleware": "2.2.0",
